# wangyi-mc-checkworld-tauri

./: .gitignore  README.md  bump.py
.github/workflows/: BUILD.md  build.yml  release-template.md
assets/: png_to_ico.py
src/: data.js  i18n.js  index.html  main.js  styles.css  theme.js  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: logger.rs  main.rs  world.rs
src-tauri/src/inspect/: db.rs  leveldat.rs  mod.rs  nbt.rs  player.rs  service.rs  types.rs
src/inspect/: controller.js  i18n.js  service.js  styles.css  view.js
