[package]
name = "wangyi-mc-checkworld-tauri"
version = "0.1.0"
description = "Minecraft Bedrock (NetEase) World Save Manager"
authors = ["VincentZyu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
fs_extra = "1.3"
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
